<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/acknowledge_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_exchange_data_by_www_fx_exchange_com"
        android:layout_margin="2dp"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/last_publishedLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_published"
        android:layout_margin="2dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/acknowledge_text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/last_published"
        app:layout_constraintBottom_toTopOf="@id/acknowledge_text2"/>

    <TextView
        android:id="@+id/last_published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/acknowledge_text1"
        app:layout_constraintStart_toEndOf="@id/last_publishedLbl"
        app:layout_constraintBottom_toTopOf="@id/acknowledge_text2"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/acknowledge_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="4dp"
        android:text="@string/search_icon_by_www_icons8_com"
        app:layout_constraintTop_toBottomOf="@id/last_published"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/acknowledge_text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="4dp"
        android:text="@string/flag_icons_by_www_flagsapi_com_and_www_flagpedia_net"
        app:layout_constraintTop_toBottomOf="@id/acknowledge_text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>